Fix flow label delete

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-09 21:08+0000\n"
+"POT-Creation-Date: 2020-11-18 21:42+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -3861,8 +3861,10 @@ msgstr ""
 msgid "Edit Label"
 msgstr "Agregar etiqueta"
 
-msgid "Remove"
-msgstr "Retirar"
+#, fuzzy
+#| msgid "Create Label"
+msgid "Delete Label"
+msgstr "Crear etiqueta"
 
 msgid "Start Flow"
 msgstr "Empezar flujo"
@@ -4326,11 +4328,6 @@ msgstr "Actualizar campos"
 
 msgid "Send All"
 msgstr "Enviar todos"
-
-#, fuzzy
-#| msgid "Create Label"
-msgid "Delete Label"
-msgstr "Crear etiqueta"
 
 msgid "Name must not be blank or begin with punctuation"
 msgstr ""
@@ -8653,6 +8650,15 @@ msgstr ""
 msgid "Ask a series of questions to collect data from your contacts."
 msgstr "Haga una serie de preguntas para obtener los datos de sus contactos."
 
+#, python-format
+msgid "<b>%(name)s</b> cannot be deleted since it is a parent to other labels."
+msgstr ""
+
+#, fuzzy
+#| msgid "Once they are deleted, they will be gone forever. There is no way to undo this operation."
+msgid "Once deleted, this label will be gone forever. There is no way to undo this operation."
+msgstr "Una vez borrados, no podrá recuperarlos. No puede deshacer esta operación. "
+
 #, fuzzy, python-format
 #| msgid "has started this flow."
 msgid "was started by %(user)s for"
@@ -9701,6 +9707,9 @@ msgstr ""
 
 msgid "Admins"
 msgstr "Administradores"
+
+msgid "Remove"
+msgstr "Retirar"
 
 msgid "You must have at least one administator"
 msgstr "Debe tener al menos un administrador"
