--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-09 21:08+0000\n"
+"POT-Creation-Date: 2020-11-18 21:42+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -3259,8 +3259,10 @@ msgstr ""
 msgid "Edit Label"
 msgstr "Добавить метку"
 
-msgid "Remove"
-msgstr "Удалить"
+#, fuzzy
+#| msgid "Create Label"
+msgid "Delete Label"
+msgstr "Создать Метку"
 
 msgid "Start Flow"
 msgstr "Начать поток"
@@ -3669,11 +3671,6 @@ msgstr "Обновить Папку"
 
 msgid "Send All"
 msgstr "Отправить Все"
-
-#, fuzzy
-#| msgid "Create Label"
-msgid "Delete Label"
-msgstr "Создать Метку"
 
 msgid "Name must not be blank or begin with punctuation"
 msgstr "Название не должно быть пустым или начинаться с пунктуационных знаков"
@@ -7775,6 +7772,16 @@ msgstr ""
 msgid "Ask a series of questions to collect data from your contacts."
 msgstr "Задайте ряд вопросов, чтобы собрать данные у Ваших контактов."
 
+#, fuzzy, python-format
+#| msgid "cannot be deleted because it is in use. Usage summary:"
+msgid "<b>%(name)s</b> cannot be deleted since it is a parent to other labels."
+msgstr "невозможно удалить, потому что используется. Сводная информация по использованию:"
+
+#, fuzzy
+#| msgid "Once deleted, this global will be gone forever. There is no way to undo this operation."
+msgid "Once deleted, this label will be gone forever. There is no way to undo this operation."
+msgstr "После удаления этот глобальный объект исчезнет навсегда. Способа отменить эту операцию не существует."
+
 #, python-format
 msgid "was started by %(user)s for"
 msgstr "было запущено %(user)s для"
@@ -9232,6 +9239,9 @@ msgstr "Логин"
 
 msgid "Admins"
 msgstr "Администраторы"
+
+msgid "Remove"
+msgstr "Удалить"
 
 msgid "You must have at least one administator"
 msgstr "У Вас должен быть хотя бы один администратор"
