--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-09 21:08+0000\n"
+"POT-Creation-Date: 2020-11-18 21:42+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -3566,8 +3566,10 @@ msgstr ""
 msgid "Edit Label"
 msgstr "Adicionar rótulo"
 
-msgid "Remove"
-msgstr "Remover"
+#, fuzzy
+#| msgid "Create Label"
+msgid "Delete Label"
+msgstr "Criar rótulo"
 
 #, fuzzy
 msgid "Start Flow"
@@ -4024,11 +4026,6 @@ msgstr "Atualizar campos"
 
 msgid "Send All"
 msgstr "Enviar todas"
-
-#, fuzzy
-#| msgid "Create Label"
-msgid "Delete Label"
-msgstr "Criar rótulo"
 
 msgid "Name must not be blank or begin with punctuation"
 msgstr ""
@@ -7971,6 +7968,14 @@ msgstr ""
 msgid "Ask a series of questions to collect data from your contacts."
 msgstr "Fazer uma série de perguntas para coletar informações de seus contatos."
 
+#, python-format
+msgid "<b>%(name)s</b> cannot be deleted since it is a parent to other labels."
+msgstr ""
+
+#, fuzzy
+msgid "Once deleted, this label will be gone forever. There is no way to undo this operation."
+msgstr "Uma vez que for removido, ele irá desaparecer para sempre. Não há maneira de desfazer esta operação."
+
 #, fuzzy, python-format
 msgid "was started by %(user)s for"
 msgstr "iniciou este fluxo"
@@ -8914,6 +8919,9 @@ msgstr ""
 
 msgid "Admins"
 msgstr "Administradores"
+
+msgid "Remove"
+msgstr "Remover"
 
 msgid "You must have at least one administator"
 msgstr "Você deve ter pelo menos um administator"
