--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-19 08:15+0000\n"
+"POT-Creation-Date: 2020-11-23 18:08+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -5860,6 +5860,14 @@ msgstr "Exporter les résultats"
 
 msgid "No matching flows."
 msgstr "Aucun flux correspondant"
+
+#, fuzzy
+#| msgid "Delete "
+msgid "Delete Run"
+msgstr "Supprimer"
+
+msgid "Deleting this run will remove it from your flow's results. While the messages for the contact will remain, any record of this flow run will be gone forever."
+msgstr ""
 
 msgid "Overview"
 msgstr "Vue d'ensemble"
