--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-26 21:46+0000\n"
+"POT-Creation-Date: 2020-11-30 20:21+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -2334,6 +2334,23 @@ msgstr ""
 #, fuzzy
 msgid "The private key provided to use their API"
 msgstr "El nombre de usuario otorgado por el proveedor para usar su API"
+
+#, python-format
+msgid "Easily use your own Enterprise WhatsApp account using %(link)s to communicate with your contacts. "
+msgstr ""
+
+msgid "API Endpoint"
+msgstr ""
+
+#, fuzzy
+#| msgid "The name of your organization"
+msgid "The API endpoint for your TextIt WhatsApp number"
+msgstr "El nombre de su organización"
+
+#, fuzzy
+#| msgid "The file name for our export"
+msgid "The access token for your TextIt WhatsApp number"
+msgstr "El nombre del archivo para nuestra exportación"
 
 #, fuzzy, python-format
 msgid "If you have a number with %(link)s you can connect it in a few easy steps to automate your SMS numbers."
@@ -7503,6 +7520,9 @@ msgstr ""
 "\n"
 "\n"
 "          "
+
+msgid "You can quickly connect TextIt WhatsApp numbers by entering the credentials below. You can find the API endpoint and access token by visiting your TextIt WhatsApp account page."
+msgstr ""
 
 msgid "You have connected a Twilio Trial Account which has some restrictions."
 msgstr ""
