--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-15 21:40+0000\n"
+"POT-Creation-Date: 2020-12-16 13:36+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -9374,7 +9374,7 @@ msgstr ""
 
 #, fuzzy
 #| msgid "Select your Organization"
-msgid "You workspace has"
+msgid "Your workspace has"
 msgstr "Elija su Organización"
 
 #, fuzzy
