--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-15 21:40+0000\n"
+"POT-Creation-Date: 2020-12-16 13:36+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -6626,7 +6626,7 @@ msgstr "Si vous utilisez l'application %(brand)s Surveyor pour exécuter des flu
 
 #, fuzzy
 #| msgid "workspaces"
-msgid "You workspace has"
+msgid "Your workspace has"
 msgstr "espaces de travail"
 
 msgid "Chatbase Account"
